# OnlineShop

./: .coverage  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
depricated/services/: cart_service.py  category_service.py  event_log_analytics_service.py  event_log_service.py  order_item_service.py  order_service.py  product_image_service.py  product_service.py  product_specification_service.py  review_service.py  role_service.py  user_service.py
depricated/services/auth/: auth_login_service.py  auth_protection_service.py  auth_registration_service.py  auth_service.py  auth_session_service.py  auth_token_service.py
depricated/services/user/: user_command_service.py
nginx/: app.conf
shop/app/: config.py  db.py  main.py
shop/app/api/: health.py
shop/app/application/: __init__.py
shop/app/core/: cache.py  config.py  db.py  exception_handlers.py  exceptions.py  lifespan.py  mongo.py  mongo_indexes.py  security.py  state.py
shop/app/dependencies/: auth.py  cache.py  db.py  mongo.py  pagination.py  pubsub.py  repositories.py  s3.py  services.py  session.py
shop/app/domain/: __init__.py  attributes.py
shop/app/infrastructure/: minio_infrastructure.py  mongo_infrastructure.py  postgres_infrastructure.py  redis_infrastructure.py
shop/app/middlewares/: log_middleware.py  registration.py
shop/app/presenters/: product_image_presenter.py  product_presenter.py
shop/app/queries/: cart_items.sql  carts.sql  categories.sql  (+11 more)
shop/scripts/: init_db.sql  init_index.sql  init_roles.py
shop/tests/: test_category_service.py
(+348 files in other folders)
