[project]
name = "collabarationsubd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosql>=13.4",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "fastapi>=0.119.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "uvicorn>=0.38.0",
    "jose>=1.0.0",
    "pydantic[email]>=2.12.3",
    "bcrypt>=5.0.0",
    "httpx>=0.28.1",
]
